--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,10 @@ li {text-align: center;}
 
     <p style="color:DodgerBlue;">If you know who I am, thats great. If you don't that doesnt mattter. Just call me Sundog, SunSuns, Wanderer, or whatever else you wannt for short.</p>
 
-    <p style="color:DodgerBlue;">Here's how you can make <strong>bold</strong> and <em>italic</em> text.</p>
+    <p style="color:DodgerBlue;">First things first. I am<strong>NOT</strong> a fan of <em>modern</em> web design.</p>
 
-    <p style="color:DodgerBlue;">Here's how you can add an image:</p>
-    <img src="/neocities.png">
+    <p style="color:DodgerBlue;">This website will use as much HTML as possible!</p>
 
-    <p style="color:DodgerBlue;">Here's how to make a list:</p>
-
-    <ul>
-      <li>First thing</li>
-      <li>Second thing</li>
-      <li>Third thing</li>
-    </ul>
-
-    <p style="color:DodgerBlue;">To learn more HTML/CSS, check out these <a href="https://neocities.org/tutorials">tutorials</a>!</p>
+    <p style="color:DodgerBlue;">!</p>
   </body>
 </html>
