--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-body {
-  background-image: url('starry.gif');
-}
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-li {text-align: center;}
-</style>
+      body {
+        background-image: url('starry.gif');
+        text-align: right; /* Aligns all text to the right */
+      }
+      h1 {
+        text-align: center; /* Centers the h1 element */
+        color: Tomato;
+      }
+      p, div, li {
+        text-align: left; /* Aligns paragraphs, divs, and list items to the left */
+        color: DodgerBlue;
+      }
+    </style>
     <title>Sundog's spew of nonsense</title>
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
@@ -19,14 +24,14 @@ li {text-align: center;}
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <h1 style="color:Tomato;">Welcome to Wandering Meander!</h1>
+    <h1>Welcome to Wandering Meander!</h1>
 
-    <p style="color:DodgerBlue;">If you know who I am, thats great. If you don't that doesnt mattter. Just call me Sundog, SunSuns, Wanderer, or whatever else you wannt for short.</p>
+    <p>If you know who I am, that's great. If you don't, that doesn't matter. Just call me Sundog, SunSuns, Wanderer, or whatever else you want for short.</p>
 
-    <p style="color:DodgerBlue;">First things first. I am<strong>NOT</strong> a fan of <em>modern</em> web design.</p>
+    <p>First things first. I am <strong>NOT</strong> a fan of <em>modern</em> web design.</p>
 
-    <p style="color:DodgerBlue;">This website will use as much HTML as possible!</p>
+    <p>This website will use as much HTML as possible!</p>
 
-    <p style="color:DodgerBlue;">!</p>
+    <p>!</p>
   </body>
 </html>
