--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       body {
         background-image: url('starry.gif');
         text-align: right; /* Aligns all text to the right */
+        cursor: url(http://www.rw-designer.com/cursor-extern.php?id=12345);
       }
       h1 {
         text-align: center; /* Centers the h1 element */
@@ -18,9 +19,6 @@
       }
     </style>
     <title>Sundog's spew of nonsense</title>
-    <!-- The style.css file allows you to change the look of your web pages.
-         If you include the next line in all your web pages, they will all share the same look.
-         This makes it easier to make new pages for your site. -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
@@ -32,6 +30,6 @@
 
     <p>This website will use as much HTML as possible!</p>
 
-    <p>!</p>
+    <p>This website was inspired !</p>
   </body>
 </html>
