--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-      body {
+      html {
         background-image: url('starry.gif');
-        text-align: right; /* Aligns all text to the right */
-        cursor: url(http://www.rw-designer.com/cursor-extern.php?id=12345);
+        cursor: url('40823.png'), auto;
+      }
+      body {
+        text-align: right;
       }
       h1 {
-        text-align: center; /* Centers the h1 element */
+        text-align: center;
         color: Tomato;
-      }
-      p, div, li {
-        text-align: left; /* Aligns paragraphs, divs, and list items to the left */
-        color: DodgerBlue;
       }
     </style>
     <title>Sundog's spew of nonsense</title>
@@ -23,13 +21,11 @@
   </head>
   <body>
     <h1>Welcome to Wandering Meander!</h1>
-
-    <p>If you know who I am, that's great. If you don't, that doesn't matter. Just call me Sundog, SunSuns, Wanderer, or whatever else you want for short.</p>
-
-    <p>First things first. I am <strong>NOT</strong> a fan of <em>modern</em> web design.</p>
-
-    <p>This website will use as much HTML as possible!</p>
-
-    <p>This website was inspired !</p>
+    <p class="smallMargins" style="color: #F589A6;">
+      welcome to wanderingmeamnder<br>
+      if you know who I am, thats great. if you don't them i guess you'll find out here.<br>
+      i'd like to give credit to <a href="https://insect.christmas">insect.christmas</a> for my inspiration for the design of this website. i really hate modern web design.<br>
+    </p>
+    
   </body>
 </html>
