--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       }
     </style>
     <title>Sundog's spew of nonsense</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="./style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <h1>Welcome to Wandering Meander!</h1>
