--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       welcome to wanderingmeamnder<br>
       if you know who I am, thats great. if you don't them i guess you'll find out here.<br>
       i'd like to give credit to <a href="https://insect.christmas">insect.christmas</a> for my inspiration for the design of this website. i really hate modern web design.<br>
-      testin testin<br>
+      testin testingggg<br>
     </p>
     <div style="text-align: center;">
       <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><br>
