--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       }
     </style>
     <title>Sundog's spew of nonsense</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Welcome to Wandering Meander!</h1>
@@ -29,6 +30,10 @@
     <div style="text-align: center;">
       <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><br>
       <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" style="width:200px;height:150px;" class="center">
-    </div>    
+    </div>   
+    <div class="sidebarLeft">
+      <h2 style="color: purple">website directory:</h2>
+      <p style="color:aqua">test line</p>
+    </div> 
   </body>
 </html>
