--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,15 @@
         cursor: url('40823.png'), auto;
       }
       body {
-        text-align: right;
+        text-align: left;
       }
       h1 {
         text-align: center;
         color: Tomato;
+      }
+      .sidebarRight {
+        float: right; 
+        width: 200px; 
       }
     </style>
     <title>Sundog's spew of nonsense</title>
@@ -31,7 +35,7 @@
       <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><br>
       <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" style="width:200px;height:150px;" class="center">
     </div>   
-    <div class="sidebarLeft">
+    <div class="sidebarRight">
       <h2 style="color: purple">website directory:</h2>
       <p style="color:aqua">test line</p>
     </div> 
