--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,41 @@
         cursor: url('40823.png'), auto;
       }
       body {
-        text-align: left;
       }
       h1 {
         text-align: center;
         color: Tomato;
       }
       .sidebarRight {
-        float: right; 
-        width: 200px; 
+        float: right;
+        width: 300px; 
       }
+      .bodyDiv {
+        text-align: left; 
+      }
+
     </style>
     <title>Sundog's spew of nonsense</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Welcome to Wandering Meander!</h1>
-    <p class="smallMargins" style="color: #F589A6;">
+    <div class="bodyDiv">
+    <p style="color: #F589A6;">
       welcome to wanderingmeamnder<br>
       if you know who I am, thats great. if you don't them i guess you'll find out here.<br>
       i'd like to give credit to <a href="https://insect.christmas">insect.christmas</a> for my inspiration for the design of this website. i really hate modern web design.<br>
       testin testingggg<br>
     </p>
-    <div style="text-align: center;">
-      <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><br>
-      <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" style="width:200px;height:150px;" class="center">
-    </div>   
+  </div>  
     <div class="sidebarRight">
       <h2 style="color: purple">website directory:</h2>
       <p style="color:aqua">test line</p>
-    </div> 
+    </div>
+    
+    <div style="text-align: center;">
+      <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><br>
+      <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" style="width:200px;height:150px;" class="center">
+    </div>  
   </body>
 </html>
