--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
     <div class="bodyDiv">
     <p style="color: #F589A6;">
       welcome to wanderingmeamnder<br>
-      if you know who I am, thats great. if you don't them i guess you'll find out here.<br>
+      if you know who i am, thats great. if you don't them i guess you'll find out here.<br>
       i'd like to give credit to <a href="https://insect.christmas">insect.christmas</a> for my inspiration for the design of this website. i really hate modern web design.<br>
+      <br>
       testin testingggg<br>
     </p>
   </div>  
@@ -41,7 +42,7 @@
     </div>
 
     <div style="text-align: center;">
-      <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><br>
+      <img src="macosmade.gif" alt="macosmade" style="width:88px;height:31px;" class="center"><img src="misc-visualstudio.png" alt="vscode" style="width:88px;height:31px;" class="center"><br>
       <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" style="width:200px;height:150px;" class="center">
     </div>  
   </body>
