--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,7 @@
       <p class="intro-text">
         welcome to wanderingmeamnder<br>
         if you know who i am, thats great. if you don't them i guess you'll find out here.<br>
-        i'd like to give credit to <a href="https://insect.christmas" onclick="delayRedirect(event, this.href)">insect.christmas</a> for my inspiration for the design of this website. i really hate modern web design.<br>
-        <br>
-        testin testingggg<br>
+        here you will find <br>
       </p>
     </div>  
     <div class="sidebarRight">
@@ -42,6 +40,12 @@
     <div id="loading" class="loading">
       <img src="loading.gif" alt="Loading...">
     </div>
-    </div>
+
+    <div class="bottom">
+      i'd like to give credit to <a href="https://insect.christmas" onclick="delayRedirect(event, this.href)">insect.christmas</a> for my inspiration for the design of this website, i really hate modern web design,<br>
+      and to "Mx. G" and my friend who goes by "Dash Out" on <a href="https://www.fiverr.com/odhg1_" onclick="delayRedirect(event, this.href)">fiverr.</a><br>
+      S.N.J.A.<sup>©</sup> 2024<br>
+      </div>
+  </div>
   </body>
 </html>
