--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
       <img src="loading.gif" alt="Loading...">
     </div>
 
-    <div class="bottom">
+    <footer class="footer">
       i'd like to give credit to <a href="https://insect.christmas" onclick="delayRedirect(event, this.href)">insect.christmas</a> for my inspiration for the design of this website, i really hate modern web design,<br>
       and to "Mx. G" and my friend who goes by "Dash Out" on <a href="https://www.fiverr.com/odhg1_" onclick="delayRedirect(event, this.href)">fiverr.</a><br>
       S.N.J.A.<sup>©</sup> 2024<br>
-      </div>
+      <footer class="footer">
   </div>
   </body>
 </html>
