--- a/public/index.html
+++ b/public/index.html
@@ -18,32 +18,30 @@
     </script>
   </head>
   <body>
-    <h1>Welcome to Wandering Meander!</h1>
+    <h1>Welcome to Wandering Meander's website!</h1>
     <div class="bodyDiv">
       <p class="intro-text">
-        welcome to wanderingmeamnder<br>
-        if you know who i am, thats great. if you don't them i guess you'll find out here.<br>
-        here you will find <br>
+        online i go by wanderingmeander, you may know me as sonny. here you will find some of my old uni work<br>
+        and some of my personal projects.<br>
+        <br>
+        use the side panel to have a look about<br>
       </p>
     </div>  
     <div class="sidebarRight">
       <h2 class="directory-title">website directory:</h2>
       <p class="test-line">test line</p>
     </div>
-
-    <div class="center-content">
-      <img src="macosmade.gif" alt="macosmade" class="center-image"><img src="misc-visualstudio.png" alt="vscode" class="center-image"><br>
-      <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" class="large-image center-image">
-    </div>  
-
+ 
     <!-- loading gif -->
     <div id="loading" class="loading">
       <img src="loading.gif" alt="Loading...">
     </div>
 
     <footer class="footer">
+      <img src="Under_construction_graphic.gif" alt="Under_construction_graphic" class="large-image center-image"><br>
+      <img src="macosmade.gif" alt="macosmade" class="center-image"><img src="misc-visualstudio.png" alt="vscode" class="center-image"><br>
       i'd like to give credit to <a href="https://insect.christmas" onclick="delayRedirect(event, this.href)">insect.christmas</a> for my inspiration for the design of this website, i really hate modern web design,<br>
-      and to "Mx. G" and my friend who goes by "Dash Out" on <a href="https://www.fiverr.com/odhg1_" onclick="delayRedirect(event, this.href)">fiverr.</a><br>
+      and to "Mx. G" and my friend who goes by "Dash Out" on <a href="https://www.fiverr.com/odhg1_" onclick="delayRedirect(event, this.href)">fiverr</a><br>
       <br>
       S.N.J.A.<sup>©</sup> 2024<br>
       <footer class="footer">
