--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
     </div>  
     <div class="sidebarRight">
       <h2 class="directory-title">website directory:</h2>
-      <p class="test-line">test line</p>
+      <p class="test-line"><a href="/are-you-a-robot/index.html" onclick="delayRedirect(event, this.href)">"Are you a robot?" University first year project</a>
+      </p>
     </div>
  
     <!-- loading gif -->
