--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,9 @@
     </div>  
     <div class="sidebarRight">
       <h2 class="directory-title">website directory:</h2>
-      <p class="test-line"><a href="/are-you-a-robot/index.html" onclick="delayRedirect(event, this.href)">"Are you a robot?" University first year project</a>
-      </p>
+      <p class="test-line">
+        <a href="are-you-a-robot/index.html" onclick="delayRedirect(event, this.href)">Are you a robot? University first year project</a>
+    </p>    
     </div>
  
     <!-- loading gif -->
