--- a/public/are-you-a-robot/index.html
+++ b/public/are-you-a-robot/index.html
@@ -8,11 +8,16 @@
       <h1>💬ARE YOU A ROBOT?🤖</h1>
     </div>
     <div class="wrapper">
-      <div id="chat" class="chat">
-        <div id="messages" class="messages"></div>
-        <form class="actions">
-          <input type="text" placeholder="Press ↵ to send..." />
-        </form>
+      <div class="content-wrapper">
+        <div id="chat" class="chat">
+          <div id="messages" class="messages"></div>
+          <form class="actions">
+            <input type="text" placeholder="Press ↵ to send..." />
+          </form>
+        </div>
+        <div class="side-content">
+          <p>The quick brown fox jumps over the lazy dog.</p>
+        </div>
       </div>
     </div>
     <script
