--- a/public/are-you-a-robot/index.html
+++ b/public/are-you-a-robot/index.html
@@ -16,7 +16,16 @@
           </form>
         </div>
         <div class="side-content">
-          <p>The quick brown fox jumps over the lazy dog.</p>
+          <p>"Are you a robot?" was a group project from my first year at university. We were tasked with creating a chatbot using the programming language Rivescript.</p>
+          <p>It didn't have the best outcome as this was pretty much our first time programming but for the start of a chatbot that is designed with no AI and had to have each potential reply programmed.</p>
+          <p>We based ours off of HAL 9000 from "2001: A Space Odyssey". Type hello/hi/hey to give it a go.</p>
+          <footer class="footer">
+            THREE YEAR OLD BUGS I HAVEN'T FIXED: <br>
+            ◘ When asking for your name, if you type your name without "my name is", it gives an error.<br>
+            ◘ Nowadays you would talk to an chatbot however you like but with how limited of a dialog tree this has, you can't say much unique without it giving an error.<br>
+            ◘ Dialogue is inaccurate to  how a terminal would output things and "l33t 5p34k"(leet speak) is inaccessible and cringy
+            
+          </footer>
         </div>
       </div>
     </div>
