--- a/public/index.html
+++ b/public/index.html
@@ -21,18 +21,20 @@
     <h1>Welcome to Wandering Meander's website!</h1>
     <div class="bodyDiv">
       <p class="intro-text">
-        online i go by wanderingmeander, you may know me as sonny. here you will find some of my old uni work<br>
-        and some of my personal projects.<br>
-        <br>
-        use the side panel to have a look about<br>
+          <span style="color:red; display:block; text-align:center;">[FROM SEPT 2<sup>nd</sup> @ 12:05PM BST THIS WEBSITE WILL NOT BE UPDATED UNTIL MARKED BY MY TEACHERS]</span><br>
+          online i go by wanderingmeander, you may know me as sonny. here you will find some of my old uni work<br>
+          and some of my personal projects.<br>
+          <br>
+          use the side panel to have a look about<br>
       </p>
-    </div>  
-    <div class="sidebarRight">
-      <h2 class="directory-title">website directory:</h2>
-      <p class="test-line">
-        <a href="are-you-a-robot/index.html" onclick="delayRedirect(event, this.href)">Are you a robot? University first year project</a>
-    </p>    
-    </div>
+      <div class="sidebarRight">
+          <h2 class="directory-title">website directory:</h2>
+          <p class="test-line">
+              <a href="are-you-a-robot/index.html" onclick="delayRedirect(event, this.href)">Are you a robot? University first year project</a>
+          </p>
+      </div>
+  </div>
+  
  
     <!-- loading gif -->
     <div id="loading" class="loading">
