--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
           online i go by wanderingmeander, you may know me as sonny. here you will find some of my old uni work<br>
           and some of my personal projects.<br>
           <br>
+          i am an assistant code coach that used to do "Graphic Design with Creative Computing" in university.<br>
+          <br>
           use the side panel to have a look about<br>
       </p>
       <div class="sidebarRight">
